# chord-weaver

./: README.md  TODO.md  chord-weaver.code-workspace  docker-compose.yml  initial_setup.sh
api/: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml  rust-toolchain.toml  rustfmt.toml
api/docs/: taylor-cox-chord-weaver-1.0.0-resolved.yaml
api/src/: main.rs
api/src/api/v0/: chord_progression.rs  mod.rs  spotify.rs
api/src/dbc/: connection.rs  models.rs  schema.rs
cache/: README.md  docker-compose.yml
chord_weaver_mobile/: README.md  pubspec.yaml
chord_weaver_mobile/android/app/: build.gradle
chord_weaver_mobile/lib/: main.dart
chord_weaver_mobile/linux/: CMakeLists.txt  my_application.cc
chord_weaver_mobile/test/: widget_test.dart
chord_weaver_mobile/web/: index.html  manifest.json
chord_weaver_mobile/windows/: CMakeLists.txt
database/: README.md  docker-compose.yml
database/postgres/: init.sql
database/web-scraper/: .gitignore  README.md  add_scraped_content_to_db.py  add_scraped_data.sh  insert_scraped_content_to_db.sql  progressions.json  requirements.txt  web_scraper.py
desktop/: README.md  TODO.md
desktop/public/: index.html  styles.css
desktop/src-tauri/: tauri.conf.json
diagrams/: README.md  chord-weaver.dbdiagramio  project-overview.drawio
mobile/: README.md
tests/: README.md
website/: .gitignore  README.md  docker-compose.yml  generate_config.sh  package-lock.json  package.json
website/public/: Chord Weaver.html  config.js  index.html  script.js  styles.css
website/ssl-certs/: generate_certs.sh
(+38 files in other folders)
