[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["ws"] }
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
base64 = "0.21.7"
diesel = { version = "2.1.4", features = ["postgres"] }
dotenv = "0.15.0"
http = "1.0.0"
redis = { version = "0.24.0", features = ["tls"] }
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_with = "3.6.1"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.1", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
